--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "electron-serve": "^1.1.0",
-    "electron-store": "^8.1.0"
+    "electron-store": "^8.1.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
@@ -23,9 +31,10 @@
     "next": "^12.3.4",
     "nextron": "^8.12.0",
     "postcss": "^8.4.30",
+    "prisma": "^5.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2"
   }
 }
