--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,14 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"],
+      "@/lib/utils": ["renderer/lib/utils"],
+      "@/components/*": ["renderer/components/*"],
+      "@/styles/*": ["renderer/styles/*"]
+    }
   },
   "exclude": ["node_modules", "renderer/next.config.js", "app", "dist"]
 }
