prisma & react query

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@/lib/utils": ["renderer/lib/utils"],
+      "@/lib/*": ["renderer/lib/*"],
       "@/components/*": ["renderer/components/*"],
       "@/styles/*": ["renderer/styles/*"]
     }
