--- a/components.json
+++ b/components.json
@@ -4,7 +4,7 @@
   "rsc": false,
   "tsx": true,
   "tailwind": {
-    "config": "renderer/tailwind.config.js",
+    "config": "tailwind.config.js",
     "css": "renderer/styles/globals.css",
     "baseColor": "slate",
     "cssVariables": true,
