--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
       "@/*": ["./*"],
       "@/lib/*": ["renderer/lib/*"],
       "@/components/*": ["renderer/components/*"],
+      "@/hooks/*": ["renderer/hooks/*"],
+      "@/interfaces/*": ["renderer/interfaces/*"],
       "@/styles/*": ["renderer/styles/*"]
     }
   },
