--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "private": true,
   "main": "main/index.js",
   "name": "track-hub",
+  "author": "TimeBridge",
   "version": "1.0.0",
+  "icon": "main/hub.ico",
   "scripts": {
     "clean": "rimraf dist main renderer/out renderer/.next",
     "dev": "npm run build-electron && electron .",
@@ -17,6 +19,7 @@
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
@@ -26,7 +29,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^14.18.63",
@@ -43,6 +47,7 @@
   },
   "build": {
     "asar": true,
+    "icon": "hub.ico",
     "files": [
       "main",
       "renderer/out"
@@ -50,7 +55,8 @@
     "extraResources": [
       "prisma/**/*",
       "node_modules/.prisma/**/*",
-      "node_modules/@prisma/client/**/*"
+      "node_modules/@prisma/client/**/*",
+      "hub.ico"
     ]
   }
 }
